--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,20 +6,19 @@
 
 @book{einstein1956investigations,
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={fig1_left_bottom.png}
+  title={Spectral analysis of representational similarity with limited neurons },
+  author={Hyunmo Kang, Abdulkadir Canatar, Sueyeon Chung},
+  year={2024},
+  publisher={Cosyne 2024 Abstract},
+  preview={power_law_bbp.png}
 }
 
 
 @book{przibram1967letters,
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={power_law_bbp.png},
-  abbr={Vision}
+  title={How rare events shape the learning curves of hierarchical data},
+  author={Hyunmo Kang, Francesco Cagnetta, Matthieu Wyart},
+  year={2024},
+  publisher={NeurIPS workshop: Scientific Methods for Understanding Deep Learning},
+  preview={fig1_left_bottom.png},
 }
