--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Spectral analysis of representational similarity with limited neurons },
-  author={Hyunmo Kang, Abdulkadir Canatar, Sueyeon Chung},
+  author={Hyunmo Kang and Abdulkadir Canatar and Sueyeon Chung},
   year={2024},
   publisher={Cosyne 2024 Abstract},
   preview={power_law_bbp.png}
@@ -17,7 +17,7 @@
 @book{przibram1967letters,
   bibtex_show={true},
   title={How rare events shape the learning curves of hierarchical data},
-  author={Hyunmo Kang, Francesco Cagnetta, Matthieu Wyart},
+  author={Hyunmo Kang and Francesco Cagnetta and Matthieu Wyart},
   year={2024},
   publisher={NeurIPS workshop: Scientific Methods for Understanding Deep Learning},
   preview={fig1_left_bottom.png},
